# compilation_database

./: CMakeLists.txt  README.md
app/: main.cpp
lib/: hello_world.cpp  hello_world.h
